src/objects/PagesApi__Community_Group_Member__c.object
<CustomObject>
    <description>Junction object which would connect groups or contacts or accounts to different groups.</description>
    <fields>
        <fullName>PagesApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the group member to an Account record.</description>
        <inlineHelpText>Defines the group member to an Account record.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Group Members</relationshipLabel>
        <relationshipName>Community_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Activated_Date__c</fullName>
        <description>Defaults to today&apos;s date when no value is populated on record insert.</description>
        <inlineHelpText>Defaults to today&apos;s date when no value is populated on record insert.</inlineHelpText>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PagesApi__Bio__c</fullName>
        <description>Description of the group member.</description>
        <inlineHelpText>Description of the group member.</inlineHelpText>
        <label>Bio</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Chatter_Group_Member_Id__c</fullName>
        <description>DO NOT UPDATE. The ID in this field links the group member to a chatter group member.  For groups with the contact member entity type only.</description>
        <inlineHelpText>DO NOT UPDATE. The ID in this field links the group member to a chatter group member.  For groups with the contact member entity type only.</inlineHelpText>
        <label>Chatter Group Member Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Community_Group__c</fullName>
        <description>The group under which all the members are linked.</description>
        <inlineHelpText>The group under which all the members are linked.</inlineHelpText>
        <label>Community Group</label>
        <referenceTo>PagesApi__Community_Group__c</referenceTo>
        <relationshipLabel>Community Group Members</relationshipLabel>
        <relationshipName>Community_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PagesApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the group member to a Contact record.</description>
        <inlineHelpText>Defines the group member to a Contact record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Group Members</relationshipLabel>
        <relationshipName>Community_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Deactivated_Date__c</fullName>
        <description>The group member deactivation date.</description>
        <inlineHelpText>The group member deactivation date.</inlineHelpText>
        <label>Deactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PagesApi__Display_In_Directory__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows group member to appear in search results when displaying group list views in the portal. Defaults checked if Is Active is checked.</description>
        <inlineHelpText>Allows group member to appear in search results when displaying group list views in the portal. Defaults checked if Is Active is checked.</inlineHelpText>
        <label>Display In Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Display_Name__c</fullName>
        <description>The name of the Group Member as you would like it to display when published to customers.</description>
        <inlineHelpText>The name of the Group Member as you would like it to display when published to customers</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Email__c</fullName>
        <description>The group member&apos;s email.</description>
        <inlineHelpText>The group member&apos;s email.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PagesApi__Facebook_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the Facebook icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the Facebook icon in the group dashboard.</inlineHelpText>
        <label>Facebook Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Google_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the Google+ icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the Google+ icon in the group dashboard.</inlineHelpText>
        <label>Google+ Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Image_URL__c</fullName>
        <defaultValue>&quot;https://s3.amazonaws.com/package-assets/integration/emerald/img/placeholders/item.png&quot;</defaultValue>
        <description>URL for the group member&apos;s image or photo.</description>
        <inlineHelpText>URL for the group member&apos;s image or photo.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Active_User__c</fullName>
        <description>Identifies an active user related to the group member.</description>
        <formula>PagesApi__User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies an active user related to the group member.</inlineHelpText>
        <label>Is Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select whether the group member is active. Defaults checked.</description>
        <inlineHelpText>Select whether the group member is active. Defaults checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select whether the group member is allowed to manage the group. Defaults unchecked.</description>
        <inlineHelpText>Select whether the group member is allowed to manage the group. Defaults unchecked.</inlineHelpText>
        <label>Is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Join_Request_Date__c</fullName>
        <description>The date that the group member requested to join a private group.</description>
        <inlineHelpText>The date that the group member requested to join a private group.</inlineHelpText>
        <label>Join Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PagesApi__LinkedIn_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the LinkedIn icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the LinkedIn icon in the group dashboard.</inlineHelpText>
        <label>LinkedIn Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Linked_Community_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the group member that is a part of a collection of groups.</description>
        <inlineHelpText>Defines the group member that is a part of a collection of groups.</inlineHelpText>
        <label>Linked Community Group</label>
        <referenceTo>PagesApi__Community_Group__c</referenceTo>
        <relationshipLabel>Community Group Members (Linked Community Group)</relationshipLabel>
        <relationshipName>Community_Group_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Role__c</fullName>
        <description>Role of the group member in the group.</description>
        <inlineHelpText>Role of the group member in the group.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                    <default>true</default>
                    <label>Member</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Status__c</fullName>
        <description>Status of the group member record:
1. Request Submitted - group member has requested to join a private group.
2. Active - group member has been added to a group.
3. Request Declined - group member has been rejected upon request to join a private group.
4. Deactivated - group member has been deactivated.</description>
        <inlineHelpText>Status of the group member record:
1. Request Submitted - requested to join a private group.
2. Active - added to a group.
3. Request Declined - rejected upon request to join a private group.
4. Deactivated - deactivated.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Request Declined</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Twitter_Profile_URL__c</fullName>
        <description>URL where the user should be redirected when they click the Twitter icon in the group dashboard.</description>
        <inlineHelpText>URL where the user should be redirected when they click the Twitter icon in the group dashboard.</inlineHelpText>
        <label>Twitter Profile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines a relationship to a contact&apos;s related community user record. CANNOT BE UPDATED.</description>
        <inlineHelpText>Defines a relationship to a contact&apos;s related community user record. CANNOT BE UPDATED.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Community_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Group Member</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Community Group Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>